Make realtime updates mostly work using backbone client-side models.
Still many little things to fix and improve, but this is a good checkpoint.

Remaining work:
1. sql optimization - calls to PlayerRealTimeScore when loading gamecenter look bad
2. gamecenter no longer needs to call ajax API - it has all the data. we should
   remove the API calls, and the API endpoint.
3. minutes remaining seems wrong in some cases.
4. we might have flipped away vs home in some places - let Steve and Mike give us fdbk

I'm sure many other things needs to be done....

--- a/app/assets/javascripts/backbone/templates/entry-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-template.html
@@ -33,7 +33,8 @@
                         </p>
                         <p class="player-record-row">
                                   <span class="player-record">
-                                    <!--99 P, 0 R, 0 A, 0 S, 0 B, 0 T--> blank 0 P, 0R, ...
+                                      <%= player.get('rtstats') %>
+                                    <!--99 P, 0 R, 0 A, 0 S, 0 B, 0 T -->
                                   </span>
                         </p>
                     </td>
@@ -44,7 +45,7 @@
                     <td>27.5% <br>
                         OWNED
                     </td>
-                    <td><h1 class="score">57.2</h1></td>
+                    <td><h1 class="score"><%= player.get('currfps') %></h1></td>
                 </tr>
                 <% }); %>
                 </tbody>
