--- a/app/assets/javascripts/backbone/templates/entry-summary-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-summary-template.html
@@ -1,13 +1,13 @@
 
 <script type="text/template" id="entry-summary-template">
-    <tr>
+    <tr data-entry-id="<%= entry.get('id') %>">
         <td>1</td>
         <td><img alt="User" class="user" src="<%= user_img %>"></td>
-        <td><span class="green">USERNAME</span></td>
-        <td><span class="entry-min-remaining">MIN REMAINING</span>
-            <progress class="entry-progress-bar" value="0" max="48"></progress>
+        <td><span class="green"><%= entry.get('username') %></span></td>
+        <td><span class="entry-min-remaining"><%= entry.min_left() %></span>
+            <progress class="entry-progress-bar" value="<%= entry.min_left() %>" max="480"></progress>
         </td>
-        <td class="fantasypoints">0</td>
+        <td class="fantasypoints"><%= entry.get('fps') %></td>
         <!--<td>$300K NFL Bomb Entry</td>-->
         <td>CONTEST NAME</td>
         <!--<td>< number_to_currency(@contest.prize, unit: '$') %> < @contest.sport %> < @contest.contest_type %></td>-->
