adding pagination mechanism

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -86,7 +86,8 @@
   </tbody>
 </table>
 <div class="clearfix"></div>
-<div class="users-next green pull-right">NEXT »</div>
+<div class="users-previous green pull-left js-gc-paginate-previous">&#171; PREVIOUS</div>
+<div class="users-next green pull-right js-gc-paginate-next">NEXT &#187;</div>
 <div class="clearfix"></div>
 <!--/List Area-->
 
