Small visual fixes

--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -1,4 +1,4 @@
-<div class='welcomeNote'>Enter the Game of your choice, then Select your Lineup and Win Cash.</div>
+<div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div>
 
 <div class="row filter-row">
   <div class="col-md-6">
