--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,7 +1,6 @@
 <div>
-  <div class="welcomeNote">Enter the Game of your choice, then Select your Lineup and Win Cash.</div>
 
-  <h2>MY CONTEST</h2>
+  <h2>MY ENTRIES</h2>
   <div class="clear">&nbsp;</div>
   <div class="filter_row">
     <div class="row">
