--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -415,10 +415,11 @@ input[type=text] {
 
 /*Welcome Note*/
 .welcomeNote {
+  font-family:'oswald-regular';
   text-align: center;
   border: 2px solid $theme-green;
   padding: 20px;
-  font-size: 18px;
+  font-size: 24px;
   margin-bottom: 15px;
 }
 
