Adding font to the table in home page - no other table should be included

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -639,3 +639,8 @@ h3.panel-group-title{
     }
   }
 }
+
+#contests_browse .contestHead {
+  font-family: "oswald-regular";
+  font-size: 1.2em;
+}
