adding color to the position column in the lineups/new view

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -157,6 +157,10 @@ table.tab {
   font-family: 'droid_sansregular';
   width: 100%;
 
+  .position strong {
+    color: #505e6c;
+  }
+
   strong  {
     color: #e3eaf0;
   }
