tables should be placed next to each other

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -133,7 +133,7 @@
           </span>
         </h4>
       </div>
-
+      <div class="lineups-push-block"></div>
       <table class='tab same-height striped-grid'>
         <thead>
         <tr>
