--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -295,3 +295,10 @@ a#clear-lineups{
 .player-stats{
   cursor: pointer;
 }
+
+#new_lineup > div.col-md2 > div.lineups-push-block {
+    float: left;
+    height: 33px;
+    display: block;
+    width: 100%;
+}
