fixing the countdown in the entries page

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -120,7 +120,7 @@
         <tr class="completedcontest">
           <td><%%= contest.id %></td>
           <td><%%= contest.sport %></td>
-          <td data-time="<%%= contest.end_at %>"  class="js-time-count"><%%= contest.render.end_at %></td>
+          <td data-time="<%%= contest.start_at %>"  class="js-time-count"><%%= contest.render.start_at %></td>
           <td><%%= contest.entry_fee %></td>
           <td><%%= contest.prize %></td>
           <td><%%= contest.entry_size %></td>
