Fix printout of entries count in gamecenter

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -31,7 +31,7 @@
       <h4><strong>Multiplayer League</strong></h4>
     </li>
     <li>
-      <h4> @entries.count Entries</h4>
+      <h4> <%= @entries.count %> Entries</h4>
     </li>
     <li>
 
