Small visual fixes, hide a few columns that aren't used yet

--- a/app/assets/javascripts/backbone/templates/entry-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-template.html
@@ -33,7 +33,7 @@
                         </p>
                         <p class="player-record-row">
                                   <span class="player-record">
-                                      <%= player_pos[0].get('rtstats') %>
+                                      <%= player_pos[0].get('rtstats') %>&nbsp;
                                     <!--99 P, 0 R, 0 A, 0 S, 0 B, 0 T -->
                                   </span>
                         </p>
@@ -42,8 +42,8 @@
                         $<span class="salary"><%= player_pos[0].get('salary') %></span> <br>
                         SALARY
                     </td>
-                    <td>27.5% <br>
-                        OWNED
+                    <td><!-- 27.5% <br>
+                        OWNED -->
                     </td>
                     <td><h1 class="score"><%= player_pos[0].get('currfps') %></h1></td>
                 </tr>
