--- a/app/assets/javascripts/backbone/templates/entry-summary-template.html
+++ b/app/assets/javascripts/backbone/templates/entry-summary-template.html
@@ -1,7 +1,6 @@
-
 <script type="text/template" id="entry-summary-template">
     <tr data-entry-id="<%= entry.get('id') %>">
-        <td>1</td>
+        <td class="postion"><%= position %></td>
         <td><img alt="User" class="user" src="<%= user_img %>"></td>
         <td><span class="green"><%= entry.get('username') %></span></td>
         <td><span class="entry-min-remaining"><%= entry.min_left() %></span>
