changing color for the home page description

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -563,7 +563,7 @@ a.join-link:hover {
 
 .contest-help {
   font-style: italic;
-  color: $theme-light-grey1;
+  color: $theme-dark-grey1;
   span {
     margin-right: 20px;
   }
