--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -28,11 +28,11 @@
 </div>
 
 <div class="contest-help">
-  <span>50/50: Finish in the top half and win the prize</span>
-  <span>
+  <p>50/50: Finish in the top half and win the prize</span>
+  <p>
     H2H: Randomly matched one-on-one contests.
     *If there is an odd number of entrants the last player sits out.
-  </span>
+  </p>
 </div>
 
 <table class='contestHead main-grid table sortable filter-result'>
