--- a/app/assets/javascripts/backbone/templates/lineup-player-template.html
+++ b/app/assets/javascripts/backbone/templates/lineup-player-template.html
@@ -8,7 +8,7 @@
         <!-- data-player attributes on tr are used by PlayerStats, when adding player to lineup -->
         <tr class="contest-player" data-player-id="<%= player.get('id') %>"
               data-player-name="<%= player.name() %>"
-            data-player-salary="<%= player.get('salary') %>" data-player-opp="<%= player.teamsstring() %>"
+            data-player-salary="<%= player.get('salary') %>" data-player-opp="<%= player.getHomeTeam() %>@<%= player.getAwayTeam() %>"
             data-player-fppg="24.5" data-player-position="<%= player.sportposition().get('name') %>">
             <td class="position">
           <span>
@@ -26,7 +26,11 @@
            </td> -->
             <td class='opp'>
                 <!--<span>Ind@<strong class='home-team'>SDD</strong></span>-->
-                <%= player.teamsstring() %>
+                <% if (player.getTeam() === player.getHomeTeam()) { %>
+                  <strong class="home-team"><%= player.getHomeTeam() %></strong>@<%= player.getAwayTeam() %>
+                <% } else { %>
+                  <%= player.getHomeTeam() %>@<strong class="home-team"><%= player.getAwayTeam() %></strong>
+                <% } %>
             </td>
             <td class='salary currency' data-value="<%= player.get('salary') %>">
                 <span><%= player.salarystring() %>
