New Lineup: Default sort from most expensive to least expensive

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -82,7 +82,7 @@
           <th class="position">POS</th>
           <th data-defaultsort="asc" class="player">PLAYER</th>
           <th class="opp">OPP</th>
-          <th class="salary">SALARY</th>
+          <th class="salary" data-defaultsort="desc">SALARY</th>
           <th class="ffpg">FPPG</th>
           <th class="add">&nbsp;</th>
         </tr>
