Small syntax fixes

--- a/app/views/contests/browse.html.erb
+++ b/app/views/contests/browse.html.erb
@@ -1,3 +1,4 @@
+<!-- homepage -->
 <div class='welcomeNote'>Enter a Contest, then Draft a Team and Win Cash</div>
 
 <div class="row filter-row">
@@ -28,7 +29,7 @@
 </div>
 
 <div class="contest-help">
-  <p>50/50: Finish in the top half and win the prize</span>
+  <p>50/50: Finish in the top half and win the prize</p>
   <p>
     H2H: Randomly matched one-on-one contests.
     *If there is an odd number of entrants the last player sits out.
