--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -46,13 +46,13 @@
     </li>
   </ul>
 
-  <ul id='filterSport' class='nav nav-tabs tabs'>
+  <ul id='filterSport' class='nav nav-tabs'>
     <li class="active">
-      <a data-toggle="tab" href="#ALL">ALL</a>
+      <a href="#ALL">ALL</a>
     </li>
     <% @positions.each do |position| %>
         <li>
-          <%= link_to position.name, "##{position.name} ", data: {toggle: 'tab'} %>
+          <%= link_to position.name, "##{position.name} " %>
         </li>
     <% end %>
   </ul>
@@ -94,27 +94,6 @@
       </table>
     </div>
 
-    <!-- render tables of players for each sport position (e.g. PG, SG, etc). User can select
-         one of these tables as a tab. -->
-    <% @positions.each.each do |position| %>
-        <div class='tab-pane' id="<%= position.name %>">
-          <table class='tab lineup table sortable striped-grid'>
-            <thead class="hide">
-            <tr>
-              <th class="position">POS</th>
-              <th data-defaultsort="asc" class="player">PLAYER</th>
-              <th class="opp">OPP</th>
-              <th class="salary" data-defaultsort="desc">SALARY</th>
-              <th class="ffpg">FPPG</th>
-              <th class="add">&nbsp;</th>
-            </tr>
-            </thead>
-            <tbody>
-              <%= render partial: 'lineups/lineup_player', collection: @contest.eligible_players.select {|p| p.sport_position == position}, as: :player %>
-            </tbody>
-          </table>
-        </div>
-    <% end %>
   </div>
   <p class='green'>Export to CSV »</p>
 </div>
