adding search logic for the input in drafting page

--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -42,7 +42,7 @@
       </div>
     </li>
     <li>
-      <input placeholder="Search" type="text"/>
+      <input placeholder="Search" type="text" id="js-draft-search">
     </li>
   </ul>
 
