--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -307,3 +307,8 @@ a#clear-lineups{
 .entries_index table th {
     text-align: right;
 }
+
+.container .opponent-team {
+  margin: 0;
+  padding: 0;
+}
