Show completed date on completed contests

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -155,7 +155,7 @@
         <tr class="completedcontest">
           <td><%%= contest.id %></td>
           <td><%%= contest.sport %></td>
-          <td><%%= contest.complete %></td>
+          <td><%%= contest.contestdate %></td>
           <td><%%= contest.render.entry_fee %></td>
           <td><%%= contest.render.prize %></td>
           <td><%%= contest.place %></td>
