accounts_controller.rb - In history action:   - Add ability to get Transactions for current user   - Add temporary code to create a couple of transactions if there are none.     This is temporary until we wire in the real code to create transactions via     Add Funds, Withdraw, Contest Entry, Winnings, etc
entry.rb
- Each entry has_one association with a transaction
  (TTD) Perhaps this should be enforced/validated?  Is there a situation when
        this is not the case?

transaction.rb
- The transaction model
- Helper funcs to define enums for transaction type and payment engine type

user.rb
- has_many transactions

history.html.erb
- Iterate through transactions to print them out on table
- Default to all transactions
  (TTD) Remove the other filters?  Also need to scrub columns

migrate/2014xxxx.rb
- migration files to create transaction model

schema.rb
- mostly transaction model related

spec/xxx
- Unused spec files for transaction testing

--- a/app/views/accounts/history.html.erb
+++ b/app/views/accounts/history.html.erb
@@ -14,17 +14,19 @@
 <div class="container fantasytabs">
   <!-- Nav tabs -->
   <ul class="nav nav-tabs">
-    <li class=""><a href="#alltransactions" data-toggle="tab">ALL TRANSACTIONS</a></li>
+    <li class="active"><a href="#alltransactions" data-toggle="tab">ALL TRANSACTIONS</a></li>
+
+    
     <li class=""><a href="#winnings" data-toggle="tab">WINNINGS</a></li>
     <li class=""><a href="#entryfees" data-toggle="tab">ENTRY FEES</a></li>
     <li class=""><a href="#withdrawals" data-toggle="tab">WITHDRAWALS</a></li>
     <li class=""><a href="#cashdeposits" data-toggle="tab">CASH DEPOSITS</a></li>
-    <li class="active"><a href="#bonusawards" data-toggle="tab">BONUS AWARDS</a></li>
+    <li class=""><a href="#bonusawards" data-toggle="tab">BONUS AWARDS</a></li>
   </ul>
 
   <!-- Tab panes -->
   <div class="tab-content">
-    <div class="tab-pane" id="alltransactions">
+    <div class="tab-pane active" id="alltransactions">
       <table class="table-responsive refer">
         <tbody>
         <tr>
@@ -35,9 +37,19 @@
           <th>DESCRIPTION</th>
           <th>STATUS</th>
         </tr>
+        <% @transactions.each do |ttt| %>
+        <tr>
+          <th><%= ttt.created_at %></th>
+          <th><%= ttt.get_type_name %></th>
+          <th><%= Float(ttt.amount_in_cents)/100.0 %></th>
+          <th><%= ttt.id %></th>
+          <th>--</th>
+          <th>--</th>
+        </tr>
+        <% end %>
         </tbody>
       </table>
-      <p>You do not have any transactions in the selected time period.</p>
+      <p>You have <%= @transactions.length %> transactions.</p>
     </div>
     <div class="tab-pane" id="winnings">
       <table class="table-responsive refer">
@@ -99,7 +111,7 @@
       </table>
       <p>You do not have any transactions in the selected time period.</p>
     </div>
-    <div class="tab-pane active" id="bonusawards">
+    <div class="tab-pane" id="bonusawards">
       <table class="table-responsive refer">
         <tbody>
         <tr>
