--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -46,6 +46,10 @@
             <%= link_to 'Games', admin_games_path %>
             <div class="line"></div>
           </li>
+          <li class='<%= menu_classes 'users' %>'>
+            <%= link_to 'Users', admin_users_path %>
+            <div class="line"></div>
+          </li>
 
           <li class="welcome-box">
             <% if user_signed_in? %>
