--- a/app/assets/stylesheets/lineups.css.scss
+++ b/app/assets/stylesheets/lineups.css.scss
@@ -693,4 +693,8 @@ table.summarymatchup tbody tr:last-child {
   }
 }
 
+.tab-content.padding-right {
+  padding-right: 3px;
+}
+
 /*------------------------------------- -----------------*/
