--- a/app/views/lineups/_draft_team.html.erb
+++ b/app/views/lineups/_draft_team.html.erb
@@ -74,7 +74,7 @@
 
   <!-- render drafting table body with all players -->
 
-  <div class="tab-content same-height js-draft-receiver">
+  <div class="tab-content same-height js-draft-receiver padding-right">
     <div class='tab-pane active' id="ALL">
       <table class='tab lineup table sortable striped-grid'>
         <thead class="hide">
