--- a/app/views/contests/_contest.html.erb
+++ b/app/views/contests/_contest.html.erb
@@ -11,7 +11,7 @@
     <%= contest_entry_fee contest %>
    </td>
   <td data-value=<%= contest.prize %>>
-    <%= number_to_currency contest.prize %>
+    <%= number_to_currency(contest.prize, precision: 0) %>
   </td>
   <td><%= "#{contest.entries_count}/#{contest.max_entries}" %></td>
   <td class="actions-column">
