Final position of a player

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -162,7 +162,7 @@
           <td><%%= contest.contestdate %></td>
           <td><%%= contest.render.entry_fee %></td>
           <td><%%= contest.render.prize %></td>
-          <td><%%= contest.place %></td>
+          <td><%%= contest.final_ranking %></td>
           <td><%%= contest.render.won %></td>
           <td><a class="button" href="<%%= contest.results_path %>">RESULTS</a></td>
         </tr>
